---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {
        "Point": StructType {
            name: "Point",
            fields: [
                (
                    "x",
                    I32,
                ),
            ],
        },
    },
    functions: [
        MirFunction {
            name: "get_x",
            ret_type: Some(
                I32,
            ),
            params: [
                LocalId(
                    0,
                ),
            ],
            locals: [
                Local {
                    name: Some(
                        "p",
                    ),
                    ty: Some(
                        Ref(
                            Named(
                                "Point",
                            ),
                            Immutable,
                        ),
                    ),
                    mutable: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: FieldAccess {
                                base: LocalId(
                                    0,
                                ),
                                field_name: "x",
                                field_index: 0,
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "point",
                    ),
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Ref(
                            Named(
                                "Point",
                            ),
                            Immutable,
                        ),
                    ),
                    mutable: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: StructLit {
                                struct_name: "Point",
                                field_values: [
                                    (
                                        "x",
                                        Int(
                                            4,
                                        ),
                                    ),
                                ],
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Ref {
                                base: LocalId(
                                    0,
                                ),
                                mutability: Immutable,
                            },
                        },
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: Call {
                                name: "get_x",
                                args: [
                                    Local(
                                        LocalId(
                                            2,
                                        ),
                                    ),
                                ],
                            },
                        },
                        Drop(
                            LocalId(
                                0,
                            ),
                        ),
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
